feat: implement Docker secrets for production database credentials
- Add docker-compose.prod.yml with Docker secrets configuration
- Update .env.example with security warnings and production notes
- Create comprehensive Docker deployment documentation
- Add validation script to verify secure configuration
- Implement secrets directory with proper .gitignore

Addresses critical security issue from code review #001 by replacing
plaintext credentials with Docker secrets for production deployments.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
+# ===================================================================
+# SECURITY WARNING: Production Deployment
+# ===================================================================
+# For production deployments, use Docker secrets instead of .env files!
+# See docker/docker-compose.prod.yml and docker/secrets/README.md
+# ===================================================================
+
 # Database Configuration
 DATABASE_USER=postgres
 DATABASE_PASSWORD=your_secure_password_here
@@ -72,3 +79,15 @@ RATE_LIMIT_TAG_CREATE=50/minute
 RATE_LIMIT_TAG_LIST=100/minute
 RATE_LIMIT_TAG_UPDATE=50/minute
 RATE_LIMIT_TAG_DELETE=30/minute
+
+# ===================================================================
+# PRODUCTION SECURITY NOTES
+# ===================================================================
+# 1. Never commit .env files with real credentials to version control
+# 2. Use Docker secrets for production (see docker/docker-compose.prod.yml)
+# 3. Generate secure keys:
+#    - SECRET_KEY: python -c "import secrets; print(secrets.token_urlsafe(64))"
+#    - Passwords: openssl rand -base64 32
+# 4. Rotate credentials regularly
+# 5. Use a secrets management system (Vault, AWS Secrets Manager, etc.)
+# ===================================================================
